# qmr

./: .gitattributes  .gitignore  CMakeLists.txt  Changelog  README.md  addtof.pl  compile.sh  compile_dump.sh  compile_dumpmdat.sh  compile_filter.sh  compile_mkhistogram.sh  compile_slicemdat.sh  compile_syncinfo.sh  convert.sh  dump.cpp  dumpmdat.cpp  filter.cpp  histogram.cpp  histogram.hpp  histolong.cpp  histolong.hpp  js_debug.cpp  lmfile.cpp  lmfile.hpp  main.cpp  mdatgetperiods.pl  mdatns2sec.pl  mkhistogram.cpp  slicemdat.cpp  statistics.sh  tests.cpp
samples/: 10kEvents.mdat  10sec.mdat  180sec_2chan_5kHz_pm_4kHz_FM_4Hz_Trigger1Hz.mdat.ini  180sec_2chan_6kHz_pm_4kHz_FM_4Hz_Trigger1Hz.mdat  1kHz_100Hz_FM_sweep_100sec.mdat  5kHz  6kHz  gettestfiles.sh  test.mdat
